# ios-bazel-demo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel_test.sh  parse_build_events.py
BazelDemo/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
BazelDemo.xcodeproj/: project.pbxproj
BazelDemo.xcodeproj/xcuserdata/billy.xcuserdatad/xcschemes/: xcschememanagement.plist
BazelDemoTests/: BazelDemoTests.swift
BazelDemoUITests/: BazelDemoUITests.swift  BazelDemoUITestsLaunchTests.swift
Modules/App/: AppDelegate.swift  BUILD.bazel  Info.plist  SceneDelegate.swift
Modules/Core/: BUILD.bazel
Modules/Core/Sources/: Array+Utils.swift  String+Utils.swift
Modules/Core/Tests/: Array+UtilsTests.swift  String+UtilsTests.swift
Modules/Feature/: BUILD.bazel
Modules/Feature/Sources/: ViewController.swift
Modules/Feature/Tests/: EmptyTests.swift
Modules/Manage/: BUILD.bazel  main.swift
Modules/TestHost/: BUILD.bazel  Info.plist  SceneDelegate.swift
bazel/github/: github_archive.bzl
bazel/python/: interpreter.bzl
bazel/swift/: custom.bzl
bazeldemo.tulsiproj/: billy.tulsiconf-user  project.tulsiconf
bazeldemo.tulsiproj/Configs/: App.tulsigen
